MainActivity.kt activity_main.xml PurchaseActivity.kt activity_purchase.xml 12:44

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+        <!--<activity android:name=".AddActivity"/>
+        <activity android:name=".MyPageActivity"/>-->
+        <activity android:name=".PurchaseActivity"/>
     </application>
 
 </manifest>
