등록&로그인 기능 구현 중.. 카테고리랑 DB 정도 남음(가상머신 작동 안 됨ㅠㅠ) 메인 쪽 담당분 intent 코드 추가 필요

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,7 @@
 
         <activity android:name=".DBManager" />
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <meta-data
@@ -40,15 +36,16 @@
         <activity android:name=".MyPageActivity"/>
         -->
         <activity android:name=".PurchaseActivity" />
-
-        <activity
-            android:name=".MainActivity_page"
-            android:label="@string/title_activity_main_page">
+        <activity android:name=".ProductReg">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity_page">
+
         </activity>
 
         <!--<activity
