AndroidManifest.xml 첫 화면에 MainActivity 나오게 코드 수정 (* line 30 - 36)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.goodsmarketapp">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -22,31 +23,24 @@
         <meta-data
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
-
-        <activity android:name=".DBManager" />
-        <activity android:name=".MainActivity">
-
-        </activity>
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-        <!--
-<activity android:name=".AddActivity"/>
-        <activity android:name=".MyPageActivity"/>
-        -->
-        <activity android:name=".PurchaseActivity" />
-        <activity android:name=".ProductReg">
+        <activity android:name=".DBManager"/>
+        <activity android:name=".Login"/>
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity_page">
+        <activity android:name=".MainActivity_page"/>
+        <activity android:name=".MainActivity_reg"/>
+        <activity android:name=".PersonnelReg"/>
+        <activity android:name=".ProductReg"/>
+        <activity android:name=".PurchaseActivity" />
 
-        </activity>
 
         <!--<activity
             android:name=".MainActivity_reg"
@@ -57,7 +51,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>-->
-        <activity android:name=".MainActivity_reg"></activity>
+
 
     </application>
 
