--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,17 @@
                Set to true if your app is Standalone, that is, it does not require the handheld
                app to run.
         -->
-        <meta-data
+        <!--<meta-data
             android:name="com.google.android.wearable.standalone"
-            android:value="true" />
+            android:value="true" />-->
 
         <activity android:name=".DBManager" />
         <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <meta-data
@@ -37,15 +41,10 @@
         -->
         <activity android:name=".PurchaseActivity" />
         <activity android:name=".ProductReg">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity_page">
-
         </activity>
 
         <!--<activity
