로그인할 때 입력한 이름으로 토스트 메시지 잘 뜨는데 회원인 이름이 아니어도 뜹니다. DB에 회원 정보 저장도 안 되는 것 같아요.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
 
+        <activity android:name=".Login" />
         <activity android:name=".DBManager" />
         <activity android:name=".MainActivity">
             <intent-filter>
