마이페이지에 아이디 뜨는 거x

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
             </intent-filter>
         </activity>-->
         <activity android:name=".MainActivity_reg"></activity>
-
+        <activity android:name=".MainActivity_info"></activity>
     </application>
 
 </manifest>
