--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.goodsmarketapp">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -23,8 +24,11 @@
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
 
-        <activity android:name=".Login" />
-        <activity android:name=".DBManager" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
+        <activity android:name=".DBManager"/>
+        <activity android:name=".Login"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,34 +36,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
-        <!--
-<activity android:name=".AddActivity"/>
-        <activity android:name=".MyPageActivity"/>
-        -->
+        <activity android:name=".MainActivity_info"/>
+        <activity android:name=".MainActivity_page"/>
+        <activity android:name=".MainActivity_reg"/>
+        <activity android:name=".ProductReg"/>
         <activity android:name=".PurchaseActivity" />
-        <activity android:name=".ProductReg">
-
-        </activity>
-        <activity
-            android:name=".MainActivity_page">
-
-        </activity>
-
-        <!--<activity
-            android:name=".MainActivity_reg"
-            android:label="@string/title_activity_main_reg">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>-->
-        <activity android:name=".MainActivity_reg"></activity>
-        <activity android:name=".MainActivity_info"></activity>
     </application>
 
 </manifest>
